{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 38,
  "lineage": "c7bace51-e9b2-1be5-32c5-362d2437f6db",
  "resources": [
    {
      "module": "module.EC2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "energy-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09871461b40a093ff",
            "arn": "arn:aws:ec2:ap-southeast-4:767397851638:instance/i-0ab92ca24102d16e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-4a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab92ca24102d16e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3bda1a723cbd92d",
            "private_dns": "ip-10-0-1-134.ap-southeast-4.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "public_ip": "16.50.115.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d6663e06c2daa4e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0562f5e07a073029c",
            "tags": {
              "Name": "energyone-code-test"
            },
            "tags_all": {
              "Name": "energyone-code-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f481188bb9dd3b7"
            ]
          },
          "dependencies": [
            "module.VPC-energy-one.aws_security_group.energy-one",
            "module.VPC-energy-one.aws_subnet.public",
            "module.VPC-energy-one.aws_vpc.energy-one"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-energy-one",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "energy-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-4:767397851638:internet-gateway/igw-022866abca4312d1a",
            "id": "igw-022866abca4312d1a",
            "owner_id": "767397851638",
            "tags": {
              "Name": "energy-one-vpc-igw"
            },
            "tags_all": {
              "Name": "energy-one-vpc-igw"
            },
            "vpc_id": "vpc-071deaf2a21d14cf3"
          },
          "dependencies": [
            "module.VPC-energy-one.aws_vpc.energy-one"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-energy-one",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-4:767397851638:route-table/rtb-04adff11b71a77ac9",
            "id": "rtb-04adff11b71a77ac9",
            "owner_id": "767397851638",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022866abca4312d1a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-071deaf2a21d14cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-energy-one.aws_internet_gateway.energy-one",
            "module.VPC-energy-one.aws_vpc.energy-one"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-energy-one",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054358d5b94ee6fc6",
            "route_table_id": "rtb-04adff11b71a77ac9",
            "subnet_id": "subnet-0562f5e07a073029c"
          },
          "dependencies": [
            "module.VPC-energy-one.aws_internet_gateway.energy-one",
            "module.VPC-energy-one.aws_route_table.public",
            "module.VPC-energy-one.aws_subnet.public",
            "module.VPC-energy-one.aws_vpc.energy-one"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-energy-one",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "energy-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-4:767397851638:security-group/sg-00f481188bb9dd3b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f481188bb9dd3b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240718074122583600000001",
            "name_prefix": "terraform-",
            "owner_id": "767397851638",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "energy-one-sg"
            },
            "tags_all": {
              "Name": "energy-one-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-071deaf2a21d14cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-energy-one.aws_vpc.energy-one"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-energy-one",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-4:767397851638:subnet/subnet-0562f5e07a073029c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-4a",
            "availability_zone_id": "apse4-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0562f5e07a073029c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397851638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-071deaf2a21d14cf3"
          },
          "dependencies": [
            "module.VPC-energy-one.aws_vpc.energy-one"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-energy-one",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "energy-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-4:767397851638:vpc/vpc-071deaf2a21d14cf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8a7b06d14e3fa7e",
            "default_route_table_id": "rtb-030517900f12652d5",
            "default_security_group_id": "sg-0dbcce578c95b5f9f",
            "dhcp_options_id": "dopt-03f1786d968848899",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071deaf2a21d14cf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030517900f12652d5",
            "owner_id": "767397851638",
            "tags": {
              "Name": "energy-one-vpc"
            },
            "tags_all": {
              "Name": "energy-one-vpc"
            }
          }
        }
      ]
    }
  ]
}